# panoptikon

./: .coverage (1)  .coverage 2  .cursorrules  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  AI_DOCUMENTATION_PROMPT.md  CHANGELOG.md  CONTRIBUTING.md  Client-panoptikon-spec.md  Makefile  README.md  TEST_IMPROVEMENT_SUMMARY.md  TEST_SUITE_IMPROVEMENT_PROPOSAL.md  benchmark_results.md  benchmark_sorting_output.txt  coverage_report.txt  docker-compose.yml  docs.py  events_patched.py  panoptikon-roadmap.md  phase2_test_results.md  pyproject.toml  pyright-migration.md  pyrightconfig.json  requirements.txt  run.sh  stage10_prompt_v6.md  stage11_prompt_v6.md  stage7_prompt_v6.md  stage9_prompt_v6.md  temp_test.db-shm  temp_thread_test.db-shm  test_output.txt  test_phase2.py  test_simple.py  test_sorting_output.txt
.cursor/: settings.json
.cursor/rules/: ai-memory.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  knowledge.yml  lint.yml  release.yml  self-hosted.yml
docs/: AI_DOCUMENTATION_GUIDE.md  CONSOLIDATION_SUMMARY.md  README.md  ai_docs copy.md  ai_docs.md  ai_docs_bak.md  document-1-panoptikon-design-build-1.md  document-2-panoptikon-specification-2.md  document-3-phased-implementation-prompts-continued.md  document-4-project-execution-recommendations.md  document-5-quality-standards-implementation.md  implementation_approach.md  panoptikon_roadmap.md  phase0-execution-prompt.md  phase0-verification-prompt.md  phase0_complete.md  phase0_verification.md  phase1-execution-prompt.md  phase1_status.md  phase2-execution-prompt.md  phase2-verification-prompt.md  phase4-execution-prompt.md  project-documentation-template.md  project_status.md  style_guide.md  ui_typing_patterns.md
docs/components/: All core components.md  Any component needing DB access.md  Build System.md  Cloud Detection.md  Configuration System.md  Connection Pool.md  Connection Pooling Requirement.md  Database Schema.md  Dependency Injection Requirement.md  Event Bus.md  FSEvents Wrapper.md  Folder Size Feature.md  Folder Size Implementation.md  Indexing System.md  Migration System.md  Security Bookmarks.md  Service Container.md  Testing Framework.md  databaseconnectionpool.md  folder-size-implementation.md  service-container.md
docs/cursor/: README.md  cursor_usage_guide.md  implementation_plan.md  prompt_template.md
docs/decisions/: adr-20250514-block-phase-4.3-until-testing.md
docs/guides/: Pyright Migration Plan - Post Phase 4.md  pyobjc_typing.md
docs/kg_export/: kg_nodes.jsonld  kg_nodes_bak.jsonld
docs/phases/: Phase 4 - Database Implementation.md  phase-1---foundation.md  phase-2---core-infrastructure.md  phase-3---filesystem-abstraction.md  phase-4---database-implementation.md
docs/prompts/: README.md  claude_prompt_template.md  phase1-execution-prompt.md  phase3-execution-prompt.md  phase4-verification-prompt.md
docs/spec/: # Panoptikon Code Error Priority List.md  AI_DOCUMENTATION_PROMPT.md  Client-panoptikon-spec.md  client-panoptikon-ui-visualisation.json  folder-size-integration-report.md  knowledge-graph-prompt.md  knowledge-system-mid-path-2.md  knowledge-system-mid-path-3.md  knowledge-system-mid-path.md  multi-window-spec.md  panoptikon-architecture-blueprint.md  panoptikon-implementation-workflow.md  panoptikon-phase-specific-prompts.md  panoptikon-phased-implementation-plan.md  panoptikon-prompt-engineering-strategy.md  panoptikon-system-architecture.md  panoptikon-technical-specification.md  panoptikon-user-experience-vision.md  pyright-migration step 1 Configure PyObjC Type Handling (1 day).md  read_panoptikon-development-roadmap.md
docs/stages/: Stage5_1_query_parser.md  read_phase_report_template.md  stage1_completion.md  stage1_prompt.md  stage2_completion.md  stage2_prompt.md  stage4_2_completion-report.md  stage4_3_migration.md  stage4_4_optimization.md  stage5_3_result_management.md  stage5_5_filtering_system.md  stage5_prompt_v6.md  stage6-1a-substage-implementation.md  stage6-1a-substage-integration.md  stage6-5-file-system-monitoring.md  stage6-6-progress-tracking.md  stage6-7-folder-size-management.md
implementation/: panoptikon-prompt-engineering-plan.md  phase1-verification-prompt.md  phase3-verification-prompt.md
panoptikon/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
panoptikon/docs/: phase0_complete.md  phase0_verification.md  phase1_status.md  project_status.md
panoptikon/src/panoptikon/: __init__.py  __main__.py
panoptikon/src/panoptikon/cloud/: __init__.py
panoptikon/src/panoptikon/config/: __init__.py  config_manager.py
panoptikon/src/panoptikon/db/: __init__.py  connection (1).py  file_store.py  operations (1).py  schema (1).py
panoptikon/src/panoptikon/index/: __init__.py  crawler.py  indexer.py  metadata.py  monitor.py
panoptikon/src/panoptikon/search/: __init__.py  searcher.py
panoptikon/src/panoptikon/ui/: __init__.py  app_launcher.py
panoptikon/src/panoptikon/utils/: __init__.py  path_utils.py
panoptikon/tests/: conftest.py
panoptikon/tests/test_utils/: test_path_utils.py
scripts/: benchmark_pool.py  benchmark_sorting.py  check_docstring_coverage.py  check_file_length.py  cleanup_tests.py  dual_reindex.py
scripts/checks/: __init__.py  timestamp_check.py
scripts/documentation/: README.md  ai_docs.py  dual_reindex.py  migrate_complete.py  migrate_kg_to_docs.py  record_transition.py  simple_migrate.py
scripts/knowledge/: add_inverse_relations.py  add_relationship_sections.py  ai_docs_parser.py  doc_lint.py  gen_template.py  graph_summary.py  memory_manager.py  memory_manager_typed.py  models.py  rebuild_graph.sh  relationship_extractor.py  relationship_extractor_typed (1).py  relationship_extractor_typed.py  test_relationship_extractor.py  validate_graph.py
scripts/qdrant/: .env.example  QUICK_REFERENCE.md  README.md  audit_fix_metadata.py  check_config.py  fix_document_field.py  index_docs.py  index_docs_mcp.py  manage.py  qdrant.sh  search_docs.py  test_docs.py  (+1 more)
tests/: __init__.py  conftest.py  events_patched.py  pytest.pyi  test_core.py  test_main.py
(+227 files in other folders)
